-- OldToby API Cabal package info


name:                oldtobyapi

-- Using semver Semantic Versioning
version:             0.1.0.0

synopsis:            The HTTP API for OldToby, a sequential job pipeline system for image processing
license:             MIT
license-file:        LICENSE

author:              Lachlan Phillips
maintainer:          flipsidelachy@gmail.com

copyright:           Copyright 2015 Lachlan Phillips

category:            Web
build-type:          Simple

cabal-version:       >=1.8


executable oldtobyapi
  hs-source-dirs:    src

  main-is:           Main.hs

  build-depends:
    aeson                     >= 0.8.0.2,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.14    && < 0.15,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    postgresql-simple         >= 0.4.9.0,
    snaplet-postgresql-simple >= 0.6,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1     && < 0.3,
    base                      >= 4.4      && < 5,
    lens                      >= 3.7.6    && < 4.7

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

