-- OldToby API Cabal package info


name:                oldtobyapi

-- Using semver Semantic Versioning
version:             0.1.0.0

synopsis:            The HTTP API for OldToby, a sequential job pipeline system for image processing
license:             MIT
license-file:        LICENSE

author:              Lachlan Phillips
maintainer:          flipsidelachy@gmail.com

copyright:           Copyright 2015 Lachlan Phillips

category:            Web
build-type:          Simple

cabal-version:       >=1.8


executable oldtobyapi
  hs-source-dirs:    src

  main-is:           Main.hs

  build-depends:
    snap                                      < 0.14,
    snap-core                       >= 0.9 && < 0.10,
    snap-server                     >= 0.9 && < 0.10,
    snap-loader-static              >= 0.9 && < 0.10,
    snap-extras                     >= 0.9 && < 0.10,
    heist,
    base,
    bytestring,
    lens,
    mtl,
    random,
    text,
    time,
    transformers,
    aeson,
    MonadCatchIO-transformers,
    postgresql-simple,
    snaplet-postgresql-simple,
    xmlhtml

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

